--- a/HelloXamarinApp/HelloXamarinApp/Resources/layout/activity_main.axml
+++ b/HelloXamarinApp/HelloXamarinApp/Resources/layout/activity_main.axml
@@ -8,5 +8,5 @@
         android:id="@+id/MyButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Hello!" />
+        android:text="@string/Hello" />
 </RelativeLayout>
